refactor: add last prettier
